Refactored reading/writing settings.

--- a/HeboTech.Wiper/HeboTech.Wiper.csproj
+++ b/HeboTech.Wiper/HeboTech.Wiper.csproj
@@ -111,6 +111,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Settings.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -125,6 +126,7 @@
     <Compile Include="Dialogs\MessageBoxService.cs" />
     <Compile Include="IO\FolderOperations.cs" />
     <Compile Include="IO\IFolderOperations.cs" />
+    <Compile Include="ISettings.cs" />
     <Compile Include="MainViewModel.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
