Refactoring reading/writing settings. Unit tests.

--- a/HeboTech.Wiper/HeboTech.Wiper.csproj
+++ b/HeboTech.Wiper/HeboTech.Wiper.csproj
@@ -111,7 +111,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Settings.cs" />
+    <Compile Include="ApplicationSettings.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
