--- a/HeboTech.Wiper.Test/HeboTech.Wiper.Test.csproj
+++ b/HeboTech.Wiper.Test/HeboTech.Wiper.Test.csproj
@@ -55,6 +55,7 @@
     <Compile Include="FolderOperationsMockup.cs" />
     <Compile Include="MainViewModelTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SettingsMockup.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\HeboTech.Wiper\HeboTech.Wiper.csproj">
