--- a/HeboTech.Wiper/HeboTech.Wiper.csproj
+++ b/HeboTech.Wiper/HeboTech.Wiper.csproj
@@ -120,10 +120,13 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="AsyncCommand.cs" />
+    <Compile Include="AsyncRelayCommand.cs" />
     <Compile Include="Dialogs\FolderBrowserDialogService.cs" />
     <Compile Include="Dialogs\IDialogService.cs" />
     <Compile Include="Dialogs\IFolderBrowserDialogService.cs" />
     <Compile Include="Dialogs\MessageBoxService.cs" />
+    <Compile Include="IAsyncCommand.cs" />
     <Compile Include="IO\FolderOperations.cs" />
     <Compile Include="IO\IFolderOperations.cs" />
     <Compile Include="ISettings.cs" />
