--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,3 +17,4 @@ test:
   assemblies: '**\*.Test.dll'
 artifacts:
 - path: '**\HeboTech.Wiper.msi'
+  name: HeboTech.Wiper.$(Appveyor_ProjectName).msi
