Trying to change artifact name in buildscript.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,4 +17,4 @@ test:
   assemblies: '**\*.Test.dll'
 artifacts:
 - path: '**\HeboTech.Wiper.msi'
-  name: HeboTech.Wiper.msi
+  name: TestName.msi
